feat: Prepare iOS app for App Store submission
- Updated app display name to 'AeroGuard'
- Added proper location permission description for App Store compliance
- Updated package dependencies
- Ready for Archive and App Store Connect upload

--- a/aeroguard-mobile/ios/AeroGuardMobile/Info.plist
+++ b/aeroguard-mobile/ios/AeroGuardMobile/Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>AeroGuardMobile</string>
+	<string>AeroGuard</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -34,7 +34,7 @@
 		<true/>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>All</string>
+	<string>We need your location to show air quality data for your area</string>
 	<key>RCTNewArchEnabled</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
