--- a/aeroguard-mobile/ios/AeroGuardMobile/Info.plist
+++ b/aeroguard-mobile/ios/AeroGuardMobile/Info.plist
@@ -39,7 +39,8 @@
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Bölgenizdeki hava kalitesi verilerini göstermek için konumunuza ihtiyacımız var.</string>
-
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Bölgenizdeki hava kalitesi verilerini göstermek için konumunuza ihtiyacımız var.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
