Implement FCM push flow and add core analytics events

--- a/aeroguard-mobile/ios/Podfile
+++ b/aeroguard-mobile/ios/Podfile
@@ -7,6 +7,10 @@ target 'AeroGuardMobile' do
 
   # Google Mobile Ads SDK
   pod 'Google-Mobile-Ads-SDK'
+  # Firebase Push Notifications
+  pod 'Firebase/Core'
+  pod 'Firebase/Messaging'
+  pod 'Firebase/Analytics'
 
 end
 
